@@ -1,4 +1,5 @@
 Development
+	When you set the osdlevel, apply it immediately
 	Allow setting osdlevel in Edit->Preferences
 	Set osdlevel to 0 by default (plan to change this in the Preferences eventually)
 	Set vol_slider so that left and right don't activate it and the media forward/rev
